[refactor] Update API logic